# control-trajectory_follower

./: .gitignore  CMakeLists.txt  NURBSCurve3D.cc  NURBSCurve3D.hh  RK4Integrator.cpp  RK4Integrator.hpp  SimpleIntegrator.cpp  SimpleIntegrator.hpp  TrajectoryControllerConfig.hpp  TrajectoryControllerNoOrientation.cpp  TrajectoryControllerNoOrientation.hpp  TrajectoryControllerP.cpp  TrajectoryControllerP.hpp  TrajectoryControllerPI.cpp  TrajectoryControllerPI.hpp  TrajectoryController_NoOrientation.cpp  TrajectoryController_NoOrientation.h  TrajectoryController_P.cpp  TrajectoryController_P.h  TrajectoryController_PI.cpp  TrajectoryController_PI.h  TrajectoryFollower.cpp  TrajectoryFollower.hpp  TrajectoryTargetCalculator.cpp  TrajectoryTargetCalculator.hpp  manifest.xml  rk4_integrator.cpp  rk4_integrator.hpp  rk4_sim.cpp  simpleintegrator.cpp  simpleintegrator.h  simpleintegrator.hpp  trajectory_follower.pc.in
src/: CMakeLists.txt  ChainedController.cpp  ChainedController.hpp  Controller.cpp  Controller.hpp  Motion2D.hpp  NoOrientationController.cpp  NoOrientationController.hpp  RK4Integrator.cpp  SamsonController.cpp  SamsonController.hpp  SimpleIntegrator.cpp  SimpleIntegrator.hpp  SubTrajectory.cpp  SubTrajectory.hpp  TrajectoryControllerNoOrientation.hpp  TrajectoryControllerP.cpp  TrajectoryControllerPI.cpp  TrajectoryFollower.cpp  TrajectoryFollower.hpp  TrajectoryFollowerTypes.hpp  TrajectoryTargetCalculator.cpp  TrajectoryTargetCalculator.hpp
viz/: CMakeLists.txt  SubTrajectoryVisualization.cpp  SubTrajectoryVisualization.hpp  trajectory_follower-viz.pc.in  vizkit_plugin.rb
